[gd_scene load_steps=7 format=2]

[ext_resource path="res://Assets/Cairo-VariableFont_wght.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Assets/Luzyf's Pack/theme.tres" type="Theme" id=2]
[ext_resource path="res://Scenes/menues/UpgradeMenu.gd" type="Script" id=3]
[ext_resource path="res://Assets/Sound/upgrade.wav" type="AudioStream" id=4]

[sub_resource type="DynamicFont" id=1]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 1 )

[node name="UpgradeMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.568627, 0.392157, 0.0941176, 1 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 1014.0
margin_bottom = 590.0

[node name="Upgrades" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_right = 1004.0
margin_bottom = 580.0
custom_constants/separation = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/Upgrades"]
margin_right = 1004.0
margin_bottom = 61.0
custom_fonts/font = SubResource( 1 )
text = "Shop"
align = 1
valign = 1

[node name="VSplitContainer3" type="VSplitContainer" parent="PanelContainer/MarginContainer/Upgrades"]
margin_top = 71.0
margin_right = 1004.0
margin_bottom = 71.0

[node name="Coins" type="Label" parent="PanelContainer/MarginContainer/Upgrades"]
margin_top = 81.0
margin_right = 1004.0
margin_bottom = 142.0
custom_fonts/font = SubResource( 1 )
align = 1
valign = 1

[node name="VSplitContainer4" type="VSplitContainer" parent="PanelContainer/MarginContainer/Upgrades"]
margin_top = 152.0
margin_right = 1004.0
margin_bottom = 152.0

[node name="Ammo" type="HBoxContainer" parent="PanelContainer/MarginContainer/Upgrades"]
margin_top = 162.0
margin_right = 1004.0
margin_bottom = 233.0
custom_constants/separation = 100
alignment = 1

[node name="Ammo_Label" type="Label" parent="PanelContainer/MarginContainer/Upgrades/Ammo"]
margin_left = 267.0
margin_top = 5.0
margin_right = 544.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "Ammo upgrade : 1/4"

[node name="Ammo_Button" type="Button" parent="PanelContainer/MarginContainer/Upgrades/Ammo"]
margin_left = 644.0
margin_right = 736.0
margin_bottom = 71.0
text = "  500  "

[node name="VSplitContainer" type="VSplitContainer" parent="PanelContainer/MarginContainer/Upgrades"]
margin_top = 243.0
margin_right = 1004.0
margin_bottom = 243.0

[node name="Health" type="HBoxContainer" parent="PanelContainer/MarginContainer/Upgrades"]
margin_top = 253.0
margin_right = 1004.0
margin_bottom = 324.0
custom_constants/separation = 100
alignment = 1

[node name="Health_Label" type="Label" parent="PanelContainer/MarginContainer/Upgrades/Health"]
margin_left = 268.0
margin_top = 5.0
margin_right = 544.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "Health upgrade : 1/4"

[node name="Health_Button" type="Button" parent="PanelContainer/MarginContainer/Upgrades/Health"]
margin_left = 644.0
margin_right = 736.0
margin_bottom = 71.0
text = "  500  "

[node name="VSplitContainer2" type="VSplitContainer" parent="PanelContainer/MarginContainer/Upgrades"]
margin_top = 334.0
margin_right = 1004.0
margin_bottom = 334.0

[node name="Damage" type="HBoxContainer" parent="PanelContainer/MarginContainer/Upgrades"]
margin_top = 344.0
margin_right = 1004.0
margin_bottom = 415.0
custom_constants/separation = 100
alignment = 1

[node name="Damage_Label" type="Label" parent="PanelContainer/MarginContainer/Upgrades/Damage"]
margin_left = 256.0
margin_top = 5.0
margin_right = 555.0
margin_bottom = 66.0
custom_fonts/font = SubResource( 2 )
text = "Damage upgrade : 1/4"

[node name="Damage_Button" type="Button" parent="PanelContainer/MarginContainer/Upgrades/Damage"]
margin_left = 655.0
margin_right = 747.0
margin_bottom = 71.0
text = "  500  "

[node name="VSplitContainer5" type="VSplitContainer" parent="PanelContainer/MarginContainer/Upgrades"]
margin_top = 425.0
margin_right = 1004.0
margin_bottom = 425.0

[node name="HBoxContainer4" type="HBoxContainer" parent="PanelContainer/MarginContainer/Upgrades"]
margin_top = 435.0
margin_right = 1004.0
margin_bottom = 506.0
custom_constants/separation = 100
alignment = 1

[node name="Main Menu" type="Button" parent="PanelContainer/MarginContainer/Upgrades/HBoxContainer4"]
margin_left = 269.0
margin_right = 458.0
margin_bottom = 71.0
text = "  Main Menu  "

[node name="Play Again" type="Button" parent="PanelContainer/MarginContainer/Upgrades/HBoxContainer4"]
margin_left = 558.0
margin_right = 735.0
margin_bottom = 71.0
text = "  Play Again  "

[node name="Sound_upgrade" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[connection signal="pressed" from="PanelContainer/MarginContainer/Upgrades/Ammo/Ammo_Button" to="." method="_on_Ammo_Button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Upgrades/Health/Health_Button" to="." method="_on_Health_Button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Upgrades/Damage/Damage_Button" to="." method="_on_Damage_Button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Upgrades/HBoxContainer4/Main Menu" to="." method="_on_Main_Menu_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/Upgrades/HBoxContainer4/Play Again" to="." method="_on_Play_Again_pressed"]
